--- a/VRChat/25/1262025.html
+++ b/VRChat/25/1262025.html
@@ -29,7 +29,7 @@
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1262025">
     <meta name="robots" content="max-image-preview:large">
-    <meta name="ga:shop" content="">
+    <meta name="ga:shop" content="G-KSBTQH43LM">
     <meta name="ga_dimension1" content="customer">
     <meta name="ga_dimension2" content="no">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
@@ -77,7 +77,7 @@
     <script src=
     "https://asset.booth.pm/assets/d85f848c3417e798bfc2.js" defer=
     "defer" nonce=
-    "f48roPq5SGYgidLhjjg6vR3ko7FsviFhkg1vGvVLeKk="></script>
+    "s6XHKa2ypF/zyH2V4u+UxJDd0eC5/kPI+JbdXeDXQ2w="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"絆創膏（ガーゼ）3Dモデル","description":"＃概要\nVRChatでの使用を想定した、絆創膏（ガーゼ）の3Dモデルです。\n\nテープとガーゼが一体となったシンプルなモデルです。\n知らず知らずのうちにオブジェクトなどにぶつかっていることも多いVRChatですので、ケガをしてしまったところに付けてください。\nアクセサリーとしてもどうぞ。\n\n画像のようにガーゼの反りを2方向で変えられるシェイプキーが入っていますので、手の甲やヒザ、首筋などいろいろなところに付けられます。\n\n\n#内容物\n・Bandage.unitypackage\nガーゼとテープが一体となった3Dモデルデータ、マテリアル、テクスチャをまとめたUnitypackageです。3Dモデルのポリゴン数は467ポリゴンです。\n・Readme\n本文が書かれている説明書です。\n\n#絆創膏（ガーゼ）3Dモデルの導入方法\n解凍した『Bandage』をUnityのメニューバーより「Asset」→「Import Package」→「Custom Package...」から開いて「Import」を選択してください。\n\n画面下部のProjectにテクスチャー、マテリアル、3Dモデルの3つの\"Bandage\"が追加されるので、3DモデルをHierarchyへドラッグ＆ドロップして、位置、大きさ、角度、シェイプキー等を調節してください。\n\n・シェイプキーの変更のやり方\nSceansに配置したBandageを選択して、InspectorのSkinned Mesh RendererからBlendShapesを開き、\"Surface Curve\"と\"Band Curve\"の値を0～100で指定します\n\nSurface Curve:ガーゼのふくらみを変更します\nBand Curve:   ガーゼの曲がり具合を変更します\n\n\n\n##利用規約##\nオリジナル3Dモデル『絆創膏（ガーゼ）3Dモデル』\n製作者:Lico\n\n本データを購入した時点で本利用規約に同意したものとします。\n利用規約の内容は変更する場合があり、最新のものが適用されます。\n\n---------------------------------------------------------------------------\n・本データを改造することを許可します。\n\n・本データ、改造データ著作権はLicoに帰属するものとします。\n\n・本データ、改造データをVRChat等にアップロードし、アバターに使用するサービスへの使用を許可します。\n\n・上記サービスで購入者本人以外が、データを使用できるようにする行為を禁止します。\n例：VRChatのペデスタルへの使用、アバタークローニングは購入者以外が使用できるようになるので禁止です。\n\n・本データ、改造データの再配布、販売を禁止します。\n\n・本データ、改造データを使用したバーチャルYouTuber等の活動を許可します。\n収益化等は制限いたしません。\n\n・本データ、改造データをゲーム、アニメーション、アプリに使用すること及び動画、放送を配信、放送することを有償・収益化・無償にかかわらず許可します。\nデータとして再度使用できる状態のものが含まれる場合は使用を禁止します。\n\n・本データ、改造データを使用する際にクレジットを記載する必要はありません。\n\n・R-18・R-18Gへの利用は制限しませんが、すみわけはしっかり行ってください。\n\n・政治、宗教活動、他者に対する誹謗中傷目的での使用を禁止します。\n\n・本データ、改造データを使用することによって生じた何らかのトラブル、損失に対しLicoは一切責任を負わないものとします。\n\n------------------------------------------------------------------------------\n制定日：2019年3月6日\n\nその他不明点等がありましたら以下に連絡ください。\nTwitter : @Lico_VR","url":"https://booth.pm/ja/items/1262025","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/a0ea27a1-0ce8-4aaf-9bac-bbd245b8b6c8/i/1262025/79970c1e-b953-42bc-9a53-b134c3529d51_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="f48roPq5SGYgidLhjjg6vR3ko7FsviFhkg1vGvVLeKk="></script>
+    nonce="s6XHKa2ypF/zyH2V4u+UxJDd0eC5/kPI+JbdXeDXQ2w="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -102,11 +102,15 @@
         <div class="recaptcha-tag" data-action=
         "booth/checkout_order" data-site-key=
         "6LfF1dcZAAAAAOHQX8v16MX5SktDwmQINVD_6mBF"></div>
-        <div class="market" data-ga-tracking-id=""
+        <div class="market" data-ga-tracking-id="G-KSBTQH43LM"
         data-product-brand="lico-vr" data-product-category="209"
         data-product-id="1262025" data-product-list="market_show"
-        data-product-price="100" data-tracking="detail_item" id=
-        "items">
+        data-product-price="100"
+        data-shop-tracking-product-category=
+        "3D Character Attachments" data-shop-tracking-product-id=
+        "1262025" data-shop-tracking-product-name="絆創膏（ガーゼ）3Dモデル"
+        data-shop-tracking-product-price="100" data-tracking=
+        "detail_item" id="items">
           <div class="market"></div>
           <div data-page-type="market" id="js-item"></div>
           <article>
@@ -163,7 +167,7 @@
                           "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              568
+                              570
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -178,7 +182,7 @@
                           "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              568
+                              570
                             </div>
                           </div></a>
                         </div>
@@ -277,12 +281,18 @@
                                         "lico-vr"
                                         data-product-category="209"
                                         data-product-variant=
-                                        "1961062" data-tracking=
-                                        "add_item"
+                                        "1961062"
+                                        data-shop-tracking-product-id="1262025"
+                                        data-shop-tracking-product-name="絆創膏（ガーゼ）3Dモデル"
+                                        data-shop-tracking-product-price="100"
+                                        data-shop-tracking-product-category="3D Character Attachments"
+                                        data-shop-tracking-product-variant="BOOST用"
+                                        data-tracking="add_item"
                                         data-product-list=
                                         "from market_show via market as gift to add_item"
-                                        data-ga-tracking-id=""
-                                        type="submit"><input type=
+                                        data-ga-tracking-id=
+                                        "G-KSBTQH43LM" type=
+                                        "submit"><input type=
                                         "hidden" name=
                                         "cart_item[variation_id]"
                                         id="cart_item_variation_id"
@@ -304,12 +314,17 @@
                                           data-product-category=
                                           "209"
                                           data-product-variant=
-                                          "1961062" data-tracking=
-                                          "add_item"
+                                          "1961062"
+                                          data-shop-tracking-product-id="1262025"
+                                          data-shop-tracking-product-name="絆創膏（ガーゼ）3Dモデル"
+                                          data-shop-tracking-product-price="100"
+                                          data-shop-tracking-product-category="3D Character Attachments"
+                                          data-shop-tracking-product-variant="BOOST用"
+                                          data-tracking="add_item"
                                           data-product-list=
                                           "from market_show via market as gift to add_item"
-                                          data-ga-tracking-id=""
-                                          type=
+                                          data-ga-tracking-id=
+                                          "G-KSBTQH43LM" type=
                                           "submit">ギフトとして贈る</button>
                                         </div>
                                       </form>
@@ -668,7 +683,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;},{&quot;label&quot;:&quot;第二十回 博麗神社例大祭&quot;,&quot;value&quot;:&quot;reitaisai-20&quot;},{&quot;label&quot;:&quot;#にじそうさく07&quot;,&quot;value&quot;:&quot;nijisousaku07&quot;},{&quot;label&quot;:&quot;COMITIA144&quot;,&quot;value&quot;:&quot;comitia144&quot;},{&quot;label&quot;:&quot;#超エアブー230505&quot;,&quot;value&quot;:&quot;air-boo-0505&quot;},{&quot;label&quot;:&quot;コスホリック35&quot;,&quot;value&quot;:&quot;cosholic35&quot;},{&quot;label&quot;:&quot;SUPER COMIC CITY 30&quot;,&quot;value&quot;:&quot;supercomiccity30&quot;},{&quot;label&quot;:&quot;M3-2023春&quot;,&quot;value&quot;:&quot;m3-2023s&quot;},{&quot;label&quot;:&quot;ドールズ パーティー49&quot;,&quot;value&quot;:&quot;dollsparty49&quot;},{&quot;label&quot;:&quot;J.GARDEN53&quot;,&quot;value&quot;:&quot;j-garden53&quot;}]"
+    "[{&quot;label&quot;:&quot;となりのモケイフェスティバル3&quot;,&quot;value&quot;:&quot;bf-tonamo3&quot;},{&quot;label&quot;:&quot;ゲームマーケット2023春&quot;,&quot;value&quot;:&quot;gamemarket-2023s&quot;},{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;},{&quot;label&quot;:&quot;第二十回 博麗神社例大祭&quot;,&quot;value&quot;:&quot;reitaisai-20&quot;},{&quot;label&quot;:&quot;#にじそうさく07&quot;,&quot;value&quot;:&quot;nijisousaku07&quot;},{&quot;label&quot;:&quot;COMITIA144&quot;,&quot;value&quot;:&quot;comitia144&quot;},{&quot;label&quot;:&quot;#超エアブー230505&quot;,&quot;value&quot;:&quot;air-boo-0505&quot;},{&quot;label&quot;:&quot;コスホリック35&quot;,&quot;value&quot;:&quot;cosholic35&quot;},{&quot;label&quot;:&quot;SUPER COMIC CITY 30&quot;,&quot;value&quot;:&quot;supercomiccity30&quot;},{&quot;label&quot;:&quot;M3-2023春&quot;,&quot;value&quot;:&quot;m3-2023s&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
